<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    logo -->
<!--    <ImageView-->
<!--        android:id="@+id/vv_logo"-->
<!--        android:layout_width="263dp"-->
<!--        android:layout_height="269dp"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginTop="47dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:contentDescription="@string/vv_logo"-->
<!--        android:src="@drawable/vv_logo" />-->

    <!--    logo background -->
    <ImageView
        android:id="@+id/vv_logo_background"
        android:layout_width="263dp"
        android:layout_height="269dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/vv_logo"
        android:src="@drawable/vv_logo_background" />

    <!--    logo foreground -->
    <ImageView
        android:id="@+id/vv_logo_foreground"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/vv_logo"
        android:src="@drawable/vv_logo_foreground" />

    <!-- email -->
    <EditText
        android:id="@+id/email_label"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="355dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/email"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|start"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="-2sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/email_label" />


    <!-- password -->
    <EditText
        android:id="@+id/password_label"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="413dp"
        android:autofillHints="password"
        android:background="@drawable/email"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|start"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:lineSpacingExtra="-2sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAppearance="@style/password_label" />


    <!--    dont have account? sign up button-->
    <TextView
        android:id="@+id/set_sign_up"
        android:layout_width="300dp"
        android:layout_height="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="471dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/set_sign_up"
        android:textAppearance="@style/set_sign_up"
        android:translationY="-1.15sp" />

    <!--    sign in button-->

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="228dp"
            android:layout_height="51dp"
            android:background="@drawable/sign_in"
            android:gravity="center"
            android:text="@string/sign_in_label"
            android:textAppearance="@style/sign_in_label" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>